[gd_scene load_steps=13 format=2]

[ext_resource path="res://Audio/Click.mp3" type="AudioStream" id=1]
[ext_resource path="res://Fonts/Milky Coffee.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audio/MainAudio.mp3" type="AudioStream" id=3]
[ext_resource path="res://CreditsMain.tres" type="Theme" id=4]
[ext_resource path="res://CreditsMain.gd" type="Script" id=5]
[ext_resource path="res://Audio/Menu Song (mp3).mp3" type="AudioStream" id=6]
[ext_resource path="res://Art/BlankShop.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Audio/bark.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=7]
size = 80
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 3
outline_color = Color( 0, 0.360784, 0.470588, 1 )
font_data = ExtResource( 2 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BlankShop2" type="Sprite" parent="."]
position = Vector2( 544, 314 )
scale = Vector2( 0.422606, 0.37052 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.0
margin_top = -117.0
margin_right = 262.0
margin_bottom = 176.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.0
margin_top = -180.0
margin_right = 333.0
margin_bottom = 246.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_right = 676.0
margin_bottom = 86.0

[node name="CreditsLabel" type="Label" parent="VBoxContainer2/VBoxContainer"]
margin_right = 676.0
margin_bottom = 86.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Tutorial"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CreditsAudio" type="AudioStreamPlayer" parent="VBoxContainer2/VBoxContainer"]
stream = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 270.0
margin_top = 197.0
margin_right = 753.0
margin_bottom = 463.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Puppy Paradise is taking in new puppies! 
Get more puppies for a higher score, but if the store's total cuteness is too much or too little your shop will explode with cuteness or will be abandoned...[/center]"
text = "Puppy Paradise is taking in new puppies! 
Get more puppies for a higher score, but if the store's total cuteness is too much or too little your shop will explode with cuteness or will be abandoned..."

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -158.0
margin_top = -123.0
margin_right = 142.0
margin_bottom = -33.0
theme = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "BACK"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="MainMenuAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="DogAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
